Criação Das Entidades

--- a/WebApplication1/Views/Web.config
+++ b/WebApplication1/Views/Web.config
@@ -7,7 +7,7 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-
+  
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
@@ -25,6 +25,10 @@
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
+
+  <connectionStrings>
+    <add name="DbContext" connectionString="Data Server=GS01D071; Initial Catalog=Client; Integrated Segurity= True; User ID=GESPLAN\alexandre.ferreira;Password=99233613" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <system.webServer>
     <handlers>
