--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -40,7 +40,7 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.StaticFiles" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net461" />
@@ -60,6 +60,7 @@
   <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Migr8" version="0.14.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
